# mountsinai-EKG

./: README.md  arduinoEKG  ecgplotter  generated latency test  gui.py  jsonTrimmer  pyproject.toml
deprecated/: arduinoEKG  ecgplotter  oldScanner.py
mountsinai_ekg/: __init__.py  gui.py  scanner.py  scannerNew.py  sync.py  syncGUI.py
mountsinai_ekg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
